--- a/stylesheet.css
+++ b/stylesheet.css
@@ -8,7 +8,7 @@ body {
 }
 
 .top-wrapper {
-    padding: 180px 0 100px 0;
+    padding: 180px 0 50px 0;
     background-image: url(magichouse.png);
     background-size: cover;
     text-align: center;
@@ -23,6 +23,11 @@ body {
      top: 0;
      z-index: 10;
  }
+
+.container {
+    width: 1100px;
+    margin: 0 auto;
+}
 
 .header-left {
     float: left;
@@ -45,11 +50,6 @@ body {
     transition: all 0.5s;
 }
 
-.container {
-    width: 750px;
-    margin: 0 auto;
-}
-
 .top-wrapper h1 {
     opacity: 0.8;
     font-size: 45px;
@@ -58,6 +58,11 @@ body {
 
 .top-wrapper p {
     padding-bottom: 30px;
+}
+
+.top-wrapper h2 {
+    opacity: 0.8;
+    padding-top: 30px;
 }
 
 .btn {
@@ -74,4 +79,28 @@ body {
 
 .fa {
     margin-right: 5px;
+}
+
+ footer {
+     width: 100%;
+     height: 65px;
+     padding: 15px 0 15px 0;
+     background-color:rgba(34, 49, 52, 0.9); 
+     color: white;
+ }
+
+.footer-left {
+    float: left;
+}
+
+.footer-right {
+    float: right;
+}
+
+.footer-left {
+    padding-top: 10px;
+}
+
+.footer-right p {
+    padding-top: 10px
 }
